<resources>
    <string name="app_name">B2B Request</string>
    <string name="username">Username</string>
    <string name="access_code">Access code</string>
    <string name="enter_your_access_code">Enter your access code</string>
    <string name="enter_your_username">Enter your username</string>

    <string name="requests">Requests</string>
    <string name="add_request">Add request</string>
    <string name="support">Support</string>
    <string name="profile">Profile</string>
    <string name="page_request">Page Request</string>

    <string name="all">All</string>
    <string name="active">Active</string>
    <string name="listed">Listed</string>
    <string name="closed">Closed</string>
    <string name="issue">Issue</string>
    <string name="deleted">Deleted</string>
    <string name="tap_to_search">Tap to search</string>

    <string name="type_your_message">Type your message</string>
    <string name="yesterday">Yesterday</string>
    <string name="choose_form">Choose form</string>
    <string name="price">Price</string>
    <string name="option_name">Option name</string>
    <string name="choose_file">Choose file</string>
    <string name="delete">Delete</string>
    <string name="send_request">Send request</string>
    <string name="price_value">Price value</string>
    <string name="option_value">Option value</string>
    <string name="clear_history">Clear history</string>
    <string name="sign_out_from_all_devices">Sign out from all devices</string>

    <string name="admin_alert">Admin alert</string>
    <string name="hello_john">Hello, John!\nNotice me your status, please.</string>
    <string name="got_it">Got it!</string>

    <string name="please_enter_email">Please enter E-mail</string>
    <string name="please_enter_access_code">Please enter access code</string>
    <string name="please_confirm_you_not_robot">Please confirm you are not a robot</string>
    <string name="an_error_occurred_communicating_server">An error occurred communicating with the server</string>


</resources>