<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_requests">

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.b2b.rqst.ui.main.addrequest.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/navigation_requests"
        android:name="com.b2b.rqst.ui.main.requests.RequestsFragment"
        android:label="@string/requests"
        tools:layout="@layout/fragment_requests" />

    <fragment
        android:id="@+id/navigation_support"
        android:name="com.b2b.rqst.ui.main.support.SupportFragment"
        android:label="@string/support"
        tools:layout="@layout/fragment_support" />
    <fragment
        android:id="@+id/navigation_add_request"
        android:name="com.b2b.rqst.ui.main.addrequest.AddRequestFragment"
        android:label="@string/add_request"
        tools:layout="@layout/fragment_add_request" />

</navigation>