<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_push_dialog">

    <TextView
        android:id="@+id/admin_alert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="7dp"
        android:layout_marginTop="9dp"
        android:text="@string/admin_alert"
        android:textColor="@color/text_delete"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
         />
    <TextView
        android:id="@+id/text_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="7dp"
        android:layout_marginTop="9dp"
        android:text="@string/hello_john"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/admin_alert"
       />


    <TextView
        android:id="@+id/button_got_it"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="7dp"
        android:layout_marginEnd="7dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="20dp"
        android:text="@string/got_it"
        android:gravity="center"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:background="@drawable/bg_button_got_it"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_message"
        app:layout_constraintBottom_toBottomOf="parent"
         />
</androidx.constraintlayout.widget.ConstraintLayout>