<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_fragment_requests"
    tools:context=".ui.main.requests.RequestsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/top_menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        app:layout_constraintBottom_toTopOf="@+id/constraint_search"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/text_all"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:text="@string/all"
            android:textAlignment="center"
            android:textSize="16sp"
            android:textColor="@color/gray_1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/text_active"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_active"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/active"
            android:textAlignment="center"
            android:textSize="16sp"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/text_all"
            app:layout_constraintRight_toLeftOf="@+id/text_listed"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_listed"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/listed"
            android:textAlignment="center"
            android:textSize="16sp"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/text_active"
            app:layout_constraintRight_toLeftOf="@+id/text_closed"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_closed"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/closed"
            android:textAlignment="center"
            android:textSize="16sp"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/text_listed"
            app:layout_constraintRight_toLeftOf="@+id/text_issue"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_issue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/issue"
            android:textAlignment="center"
            android:textSize="16sp"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/text_closed"
            app:layout_constraintRight_toLeftOf="@+id/text_deleted"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_deleted"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/deleted"
            android:textAlignment="center"
            android:textSize="16sp"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/text_issue"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_search"
        android:padding="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/top_menu">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/image_search"
            android:src="@drawable/ic_search"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/edit_username"
            />
        <EditText
            android:id="@+id/edit_username"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:hint="@string/tap_to_search"
            android:textSize="14sp"
            android:textColorHint="@color/text_tap"
            android:background="@null"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/image_search"
            app:layout_constraintRight_toLeftOf="@+id/image_scan"
             />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/image_scan"
            android:visibility="gone"
            android:src="@drawable/ic_scan"
            android:layout_marginEnd="10dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/edit_username"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="10dp"
        app:layoutManager="LinearLayoutManager"
        android:padding="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraint_search"
        />
    <ProgressBar
        android:id="@+id/progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraint_search" />
</androidx.constraintlayout.widget.ConstraintLayout>