<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_fragment_requests"
    tools:context=".ui.main.addrequest.AddRequestFragment">

    <TextView
        android:id="@+id/number_form"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:textAlignment="center"
        android:text="No. F12005"
        android:lineSpacingExtra="1sp"
        android:textSize="20sp"
        android:letterSpacing="0.01"
        android:shadowColor="@color/text_request_shadow_color"
        android:shadowDx="0"
        android:shadowDy="4"
        android:shadowRadius="4"
        android:textColor="@color/text_request_number"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

     <TextView
        android:id="@+id/text_choose_form"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:textAlignment="center"
        android:text="@string/choose_form"
        android:lineSpacingExtra="2sp"
        android:textSize="16sp"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/number_form" />
    <Spinner
        android:id="@+id/spinner_form"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:background="@drawable/bg_spinner"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="10dp"
        android:paddingStart="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_choose_form"
        />
    <TextView
        android:id="@+id/text_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:textAlignment="center"
        android:text="@string/price"
        android:lineSpacingExtra="2sp"
        android:textSize="16sp"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner_form" />
    <EditText
        android:id="@+id/edit_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:hint="@string/price_value"
        android:textSize="20sp"
        android:background="@drawable/bg_select"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_price"
         />

</androidx.constraintlayout.widget.ConstraintLayout>